--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   validators: ^3.0.0
   flutter_secure_storage: ^9.2.2
   connectivity_plus: ^6.1.0
+  shared_preferences: ^2.3.3
 
 flutter_launcher_icons:
   android: true
