--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   connectivity_plus: ^6.1.0
   shared_preferences: ^2.3.3
   dartz: ^0.10.1
+  alarm: ^4.1.1
+  sqflite: ^2.4.1
+  path: ^1.9.0
 
 flutter_launcher_icons:
   android: true
