--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   alarm: ^4.1.1
   sqflite: ^2.4.1
   path: ^1.9.0
+  device_preview: ^1.2.0
 
 flutter_launcher_icons:
   android: true
