--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   device_preview: ^1.2.0
+  firebase_core: ^3.8.1
+  firebase_app_distribution: ^1.0.0
 
 flutter_launcher_icons:
   android: true
