--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,9 @@
         {
             "name": "Sample-Flutter-Todo-App",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "lib/main.dart",
+            "args": ["--flavor", "development", "--target", "lib/main.dart" ]
         },
         {
             "name": "Sample-Flutter-Todo-App (profile mode)",
