--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path: ^1.9.0
   device_preview: ^1.2.0
   firebase_core: ^3.8.1
+  # flutter_gen: ^5.8.0
 
 flutter_launcher_icons:
   android: true
@@ -38,6 +39,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  # flutter_gen_runner: ^5.8.0
 
 flutter:
   uses-material-design: true
