--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   path: ^1.9.0
   device_preview: ^1.2.0
   firebase_core: ^3.8.1
-  # flutter_gen: ^5.8.0
+  flutter_gen_runner: ^5.8.0
 
 flutter_launcher_icons:
   android: true
@@ -39,26 +39,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  # flutter_gen_runner: ^5.8.0
+  build_runner: ^2.4.13
 
 flutter:
   uses-material-design: true
   generate: true
   assets:
-  - assets/images/logo.png
-  - assets/icons/calendar.svg
-  - assets/icons/note.svg
-  - assets/icons/cele.svg
-  - assets/icons/back.svg
-  - assets/icons/selectDate.svg
-  - assets/icons/selectTime.svg
-  - assets/icons/lang.svg
-  - assets/icons/signout.svg
-  - assets/gifs/loading.gif
-  - assets/images/circle_shape_big.png
-  - assets/images/circle_shape_small.png
-  - assets/icons/view.svg
-  - assets/icons/hide.svg
-  - assets/icons/google.png
-  - assets/icons/facebook.png
-  - assets/icons/apple.png
+    - assets/images/
+    - assets/gifs/
+    - assets/icons/
