--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   device_preview: ^1.2.0
   firebase_core: ^3.8.1
   flutter_gen_runner: ^5.8.0
+  flutter_dotenv: ^5.2.1
 
 flutter_launcher_icons:
   android: true
