--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "type": "dart",
             "program": "lib/main.dart",
-            // "args": ["--flavor", "development", "--target", "lib/main.dart" ]
+            "args": ["--flavor", "development", "--target", "lib/main.dart" ]
         },
         {
             "name": "Sample-Flutter-Todo-App (profile mode)",
