--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ flutter_launcher_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
   flutter_lints: ^4.0.0
   build_runner: ^2.4.13
+  test: ^1.25.7
 
 flutter:
   uses-material-design: true
