--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        channel: stable
-        flutter-version-file: pubspec.yaml
+        channel: 'stable'
     - run: flutter --version
 
     # Install dependencies
