--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,14 @@ jobs:
     steps:
     # Checkout source code
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
+
+    # Setup Java 17
+    - name: Setup Java 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
     # Setup Flutter
     - name: Setup Flutter
