--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
   uses-material-design: true
   generate: true
   assets:
+    - .env
     - assets/images/
     - assets/gifs/
     - assets/icons/
