--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
     - name: Create .env file
       run: |
         echo "API_KEY=${{ secrets.API_KEY }}" >> .env
-        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
-        echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
+        echo "DATABASE_URL=${{ secrets.API_URL }}" >> .env
 
     # Install dependencies
     - name: Install dependencies
