--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   package_info_plus: ^8.1.2
   gif: ^2.3.0
+  fl_chart: ^0.69.2
 
 flutter_launcher_icons:
   android: true
